# zenith

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  README.zh-CN.md
Zenith/: Package.swift
Zenith/Resources/: Info.plist  Zenith.icns
Zenith/Sources/CZenith/: module.modulemap  zenith.h
Zenith/Sources/Zenith/: AIPanel.swift  ClaudeBridge.swift  ShaderSource.swift  Shaders.metal  TerminalView.swift  ZenithApp.swift
crates/zenith-config/: Cargo.toml
crates/zenith-config/src/: lib.rs
crates/zenith-core/: Cargo.toml
crates/zenith-core/resources/: shell-integration.sh
crates/zenith-core/src/: cell.rs  grid.rs  history.rs  lib.rs  pty.rs  shell_integration.rs  term.rs
crates/zenith-ffi/: Cargo.toml  build.rs  cbindgen.toml
crates/zenith-ffi/src/: lib.rs
crates/zenith-render/: Cargo.toml
crates/zenith-render/src/: atlas.rs  font.rs  lib.rs  vertex.rs
docs/superpowers/plans/: 2026-07-02-zenith-ai-panel.md  2026-07-02-zenith-local-autocomplete.md  2026-07-03-zenith-altscreen-scroll.md  2026-07-03-zenith-app-bundle.md  2026-07-03-zenith-autocomplete-v2.md
docs/superpowers/specs/: 2026-07-02-zenith-smart-features-design.md  2026-07-03-zenith-altscreen-scroll-design.md  2026-07-03-zenith-app-bundle-design.md  2026-07-03-zenith-autocomplete-v2-design.md
scripts/: make_icon.swift
