[package]
name = "zenith-ffi"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
zenith-core = { workspace = true }
zenith-render = { workspace = true }
zenith-config = { workspace = true }
log = "0.4"
env_logger = "0.11"

[build-dependencies]
cbindgen = "0.27"
